--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
     width: 100%;
     max-width: 30em;
     font-size: 1.2rem;
-    background-color: rgb(255, 255, 255,0.7);
+    background-color: white;
     padding: 1.5em 2em;
     line-height: 1.4;
     border-radius: 0.7em;
@@ -49,4 +49,7 @@
     opacity: 1;
     transform: scale(1.1);
     box-shadow: 0 0 0 0.8 #0005;
+}
+.dados{
+    width: 25px;
 }
